--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "@haixing_hu/clone": "^1.11.1",
     "@haixing_hu/common-util": "^5.1.0",
     "@haixing_hu/common-validation-rule": "^1.2.1",
-    "@haixing_hu/naming-style": "^1.3.0",
-    "@haixing_hu/type-detect": "^1.1.0"
+    "@haixing_hu/naming-style": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
