--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@haixing_hu/config",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A JavaScript library providing a global configuration object for Apps.",
   "author": "Haixing Hu (starfish.hu@gmail.com)",
   "license": "Apache-2.0",
@@ -17,12 +17,12 @@
     "utility",
     "webapp"
   ],
-  "main": "dist/config.cjs.min.js",
-  "module": "dist/config.esm.min.mjs",
+  "main": "dist/config.min.cjs",
+  "module": "dist/config.min.mjs",
   "exports": {
     ".": {
-      "require": "./dist/config.cjs.min.js",
-      "import": "./dist/config.esm.min.mjs"
+      "require": "./dist/config.min.cjs",
+      "import": "./dist/config.min.mjs"
     }
   },
   "sideEffects": false,
@@ -46,10 +46,10 @@
   },
   "peerDependencies": {
     "@babel/runtime": "^7.23.6",
-    "@haixing_hu/clone": "^1.11.1",
-    "@haixing_hu/common-util": "^5.1.0",
-    "@haixing_hu/common-validation-rule": "^1.2.1",
-    "@haixing_hu/naming-style": "^1.3.0"
+    "@haixing_hu/clone": "^1.12.0",
+    "@haixing_hu/common-util": "^5.2.0",
+    "@haixing_hu/common-validation-rule": "^1.3.0",
+    "@haixing_hu/naming-style": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
@@ -57,15 +57,15 @@
     "@babel/plugin-transform-runtime": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/runtime": "^7.23.6",
-    "@haixing_hu/clone": "^1.11.1",
-    "@haixing_hu/common-util": "^5.1.0",
-    "@haixing_hu/common-validation-rule": "^1.2.1",
+    "@haixing_hu/clone": "^1.12.0",
+    "@haixing_hu/common-util": "^5.2.0",
+    "@haixing_hu/common-validation-rule": "^1.3.0",
     "@haixing_hu/eslint-config": "^1.3.3",
     "@haixing_hu/jsdoc-minami": "^1.5.1",
-    "@haixing_hu/naming-style": "^1.3.0",
-    "@haixing_hu/rollup-builder": "^1.6.5",
-    "@haixing_hu/type-detect": "^1.1.0",
-    "@haixing_hu/typeinfo": "^3.0.0",
+    "@haixing_hu/naming-style": "^1.3.1",
+    "@haixing_hu/rollup-builder": "^1.8.2",
+    "@haixing_hu/type-detect": "^1.2.0",
+    "@haixing_hu/typeinfo": "^3.1.0",
     "@jest/core": "^29.7.0",
     "@rollup/plugin-alias": "^5.0.1",
     "@rollup/plugin-babel": "^6.0.4",
@@ -88,5 +88,5 @@
     "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0"
   },
-  "packageManager": "yarn@4.0.0"
+  "packageManager": "yarn@4.5.0"
 }
