--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@haixing_hu/config",
-  "version": "1.1.1",
+  "name": "@qubit-ltd/config",
+  "version": "1.1.2",
   "description": "A JavaScript library providing a global configuration object for Apps.",
   "author": "Haixing Hu (starfish.hu@gmail.com)",
   "license": "Apache-2.0",
@@ -46,10 +46,10 @@
   },
   "peerDependencies": {
     "@babel/runtime": "^7.26.0",
-    "@haixing_hu/clone": "^1.12.2",
-    "@haixing_hu/common-util": "^5.3.3",
-    "@haixing_hu/common-validation-rule": "^1.4.3",
-    "@haixing_hu/naming-style": "^1.3.3"
+    "@qubit-ltd/clone": "^1.12.3",
+    "@qubit-ltd/common-util": "^5.3.4",
+    "@qubit-ltd/common-validation-rule": "^1.4.4",
+    "@qubit-ltd/naming-style": "^1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -57,21 +57,21 @@
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
     "@babel/runtime": "^7.26.0",
-    "@haixing_hu/clone": "^1.12.2",
-    "@haixing_hu/common-util": "^5.3.3",
-    "@haixing_hu/common-validation-rule": "^1.4.3",
-    "@haixing_hu/eslint-config": "^1.3.3",
-    "@haixing_hu/jsdoc-minami": "^1.5.1",
-    "@haixing_hu/naming-style": "^1.3.3",
-    "@haixing_hu/rollup-builder": "^1.8.3",
-    "@haixing_hu/type-detect": "^1.2.2",
-    "@haixing_hu/typeinfo": "^3.1.2",
     "@jest/core": "^29.7.0",
+    "@qubit-ltd/clone": "^1.12.3",
+    "@qubit-ltd/common-util": "^5.3.4",
+    "@qubit-ltd/common-validation-rule": "^1.4.4",
+    "@qubit-ltd/eslint-config": "^1.3.4",
+    "@qubit-ltd/jsdoc-minami": "^1.5.2",
+    "@qubit-ltd/naming-style": "^1.3.4",
+    "@qubit-ltd/rollup-builder": "^1.8.7",
+    "@qubit-ltd/type-detect": "^1.2.3",
+    "@qubit-ltd/typeinfo": "^3.1.4",
     "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.8",
     "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-node-resolve": "^15.3.1",
     "@rollup/plugin-terser": "^0.4.4",
     "babel-plugin-transform-object-hasown": "^1.1.0",
     "check-es-version": "^1.5.0",
@@ -84,9 +84,9 @@
     "jest-environment-jsdom-global": "^4.0.0",
     "jest-extended": "^4.0.2",
     "jsdoc": "^4.0.4",
-    "rollup": "^4.28.1",
+    "rollup": "^4.29.2",
     "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-visualizer": "^5.12.0"
+    "rollup-plugin-visualizer": "^5.13.1"
   },
   "packageManager": "yarn@4.5.0"
 }
