--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qubit-ltd/config",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "description": "A JavaScript library providing a global configuration object for Apps.",
   "author": "Haixing Hu (starfish.hu@gmail.com)",
   "license": "Apache-2.0",
@@ -42,7 +42,9 @@
     "lint": "eslint ./src",
     "doc": "jsdoc -c jsdoc.json",
     "es5": "check-es-version -e 5 -s true",
-    "deploy": "npm run lint && npm run test && npm run build:all && npm publish --registry='https://npm.qubit.ltd/' --access public"
+    "deploy": "npm run lint && npm run test && npm run build:all && npm publish --registry='https://npm.qubit.ltd/' --access public",
+    "deploy:public": "npm run lint && npm run test && npm run build:all && npm publish --registry='https://registry.npmjs.org/' --access public",
+    "deploy:all": "npm run deploy && npm publish --registry='https://registry.npmjs.org/' --access public"
   },
   "peerDependencies": {
     "@babel/runtime": "^7.26.0",
