--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qubit-ltd/config",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "A JavaScript library providing a global configuration object for Apps.",
   "author": "Haixing Hu (starfish.hu@gmail.com)",
   "license": "Apache-2.0",
@@ -78,6 +78,7 @@
     "@rollup/plugin-terser": "^0.4.4",
     "babel-plugin-transform-object-hasown": "^1.1.0",
     "check-es-version": "^1.5.1",
+    "clean-jsdoc-theme": "^4.3.0",
     "core-js": "^3.41.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
